# driftpyrs

./: .gitignore  ASYNC_ARCHITECTURE.md  Cargo.toml  README.md  build.rs  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
examples/: all_functions.py  simple.py  test_async_bridge.py  test_cache_pattern.py  test_drift_client.py  test_subscription.py
python/driftpyrs/: __init__.py
scripts/: dev-rosetta.sh  setup.sh
src/: addresses.rs  async_test.rs  cache_demo.rs  constants.rs  drift_client.rs  lib.rs  math.rs  pyth_lazer.rs  utils.rs
