[package]
name = "driftpyrs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "_driftpyrs"
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[features]
default = []
observability = ["dep:tracing", "dep:tracing-subscriber"]
tokio-console = ["observability", "dep:console-subscriber"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full", "tracing"] }
dashmap = "6"
drift-rs = { git = "https://github.com/drift-labs/drift-rs", tag = "v1.0.0-alpha.16" }
solana-sdk = "2"

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
console-subscriber = { version = "0.5", optional = true }
